Fix link to 1836 RP page and create index.html for the 1836 RP directory

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p class="description">Select a roleplay to explore timelines, maps, and war reports.</p>
 
   <div class="map-wrapper" style="display: flex; flex-direction: column; align-items: center; gap: 20px; margin-top: 40px;">
-    <a class="rp-button" href="1836_RP.html">1836 RP (2025)</a>
+    <a class="rp-button" href="1836_RP/index.html">1836 RP (2025)</a>
   </div>
 
 </body>
