--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Weapons Hangout Server Archive</h1>
   <p class="description">Select a roleplay to explore timelines, maps, and war reports.</p>
 
-  <div class="map-wrapper" style="display: flex; flex-direction: column; align-items: center; gap: 20px; margin-top: 40px;">
+  <div style="display: flex; justify-content: center; gap: 20px; margin-top: 40px;">
     <a class="rp-button" href="1836_RP/index.html">1836 RP (2025)</a>
   </div>
 
