--- a/1836_RP/countries.html
+++ b/1836_RP/countries.html
@@ -27,7 +27,7 @@ United States | Ironic <br>
 Austria | Eden <br>
 New Granada | Heitor <br>
 Raj | Viggo/Valentina <br>
-Italy | Africa <br>
+Italy | Africa and NDP <br>
 Japan | Cherry <br>
 Netherlands | Frites <br>
 Saxony | MavelDraconia <br>
