Fix typo in header title in countries.html

--- a/1836_RP/countries.html
+++ b/1836_RP/countries.html
@@ -16,7 +16,7 @@
       </ul>
     </div>
   </header>
-   <h1>Player and COuntries</h1>
+   <h1>Player and Countries</h1>
    
 <div class="treaty-post">
   <h3>List of Countries and Players</h3>
