Add Treaty of Venice between Austrian Empire and Italy with mutual defense clauses

--- a/1836_RP/diplomacy.html
+++ b/1836_RP/diplomacy.html
@@ -104,5 +104,14 @@
 </p>
 </div>
 
+<div class="treaty-post">
+  <h3>Treaty of Venice</h3>
+  <div class="treaty-meta">September 1837 | Austrian Empire and Italy</div>
+  <p>
+- The Austrian Empire and the Kingdom of Italy shall commit to the mutual defense and territorial integrity of each other in times of conflict. <br>
+- If any further amendments must be made to the treaty, the Austrian and Italian heads of state shall convene in the city of Venice to negotiate.
+</p>
+</div>
+
 </body>
 </html>
