First Balkan War

--- a/1836_RP/wars.html
+++ b/1836_RP/wars.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Diplomacy - Treaties</title>
+  <title>Wars</title>
   <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
@@ -48,7 +48,7 @@ Neutral but close: <br>
 - Montenegro <br>
 - Greece <br>
   </p>
-  <a class="rp-button" href="First_Balkan_War/index.html">War Reports</a>
+  <a class="rp-button" href="Great-Minor_Jihad/index.html">War Reports</a>
 </div>
 
 </body>
