Update link for War Reports to point to First Balkan War

--- a/1836_RP/wars.html
+++ b/1836_RP/wars.html
@@ -48,7 +48,7 @@ Neutral but close: <br>
 - Montenegro <br>
 - Greece <br>
   </p>
-  <a class="rp-button" href="Great-Minor_Jihad/index.html">War Reports</a>
+  <a class="rp-button" href="First Balkan War/index.html">War Reports</a>
 </div>
 
 </body>
