Added Eurasian Theatre

--- a/1836_RP/First Balkan War/turn_1.html
+++ b/1836_RP/First Balkan War/turn_1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Diplomacy - Treaties</title>
+  <title>Turn 1 - First Balkan War</title>
   <link rel="stylesheet" href="../../style.css" />
 </head>
 <body>
@@ -143,7 +143,25 @@
       <div class="hover-point" style="left:955px; top: 622px; background:#007f00;" title="Hejazi Independence"></div>
     </a>
     <a href="afro-arabian_theatre.html">
-      <div class="hover-point" style="left:940px; top: 787px; background:#bc5a53;" title="Ssomalis Lead Rebellion and Invasion"></div>
+      <div class="hover-point" style="left:940px; top: 787px; background:#bc5a53;" title="Somalis Lead Rebellion and Invasion"></div>
+    </a>
+    <a href="eurasian_theatre.html">
+      <div class="hover-point" style="left:987px; top: 185px; background:#3ab794;" title="Kazakh Seizure of the Lower Volga"></div>
+    </a>
+    <a href="eurasian_theatre.html">
+      <div class="hover-point" style="left:961px; top: 286px; background:#559e53;" title="Ottoman Occupation of the Caucasus"></div>
+    </a>
+    <a href="eurasian_theatre.html">
+      <div class="hover-point" style="left:755px; top: 201px; background:#559e53;" title="Ottoman Occupation of Bessarabia"></div>
+    </a>
+    <a href="eurasian_theatre.html">
+      <div class="hover-point" style="left:659px; top: 236px; background:#2a356d;" title="Stalemate Across the Balkan Line"></div>
+    </a>
+    <a href="eurasian_theatre.html">
+      <div class="hover-point" style="left:632px; top: 263px; background:#9ba56a;" title="Stalemate Across the Balkan Line"></div>
+    </a>
+    <a href="eurasian_theatre.html">
+      <div class="hover-point" style="left:654px; top: 297px; background:#5ac45a;" title="Italo-Turkish Coastal Standoff"></div>
     </a>
   </div>
 
@@ -179,10 +197,10 @@ The Coalition: <br>
 - France - ? (only for Algeria)<br>
  <br>
 Neutral but close: <br>
-<s>- Montenegro</s> <br>
+- Montenegro <br>
 - Greece <br>
 <br>
-Mujahideen: <br>
+Mujahideen - all Koriks: <br>
 - Hejaz (Egypt) <br>
 - Yemen <br>
 - Nejd <br>
@@ -209,6 +227,7 @@ Mujahideen: <br>
 - Abkhazia <br>
 - Tunisia (Ottomans) <br>
 - Tripolitania (Ottomans) <br>
+- Maldives <br>
   </p>
 </div>
 
