--- a/1836_RP/First Balkan War/afro-arabian_theatre.html
+++ b/1836_RP/First Balkan War/afro-arabian_theatre.html
@@ -18,7 +18,7 @@
     </div>
   </header>
 
-  <h1>North African Front (and Arabia)</h1>
+  <h1>African front (and Arabia)</h1>
 
   <div class="treaty-post">
     <h3>Tunisian and Tripolitanian Invasions</h3>
