--- a/1836_RP/First Balkan War/turn_1.html
+++ b/1836_RP/First Balkan War/turn_1.html
@@ -163,6 +163,9 @@
     <a href="eurasian_theatre.html">
       <div class="hover-point" style="left:654px; top: 297px; background:#5ac45a;" title="Italo-Turkish Coastal Standoff"></div>
     </a>
+    <a href="malayan_theatre.html">
+      <div class="hover-point" style="left:1754px; top: 906px; background:#669e78;" title="Aceh Leads the Uprising"></div>
+    </a>
   </div>
 
   <div class="treaty-post">
