--- a/1836_RP/First Balkan War/turn_1.html
+++ b/1836_RP/First Balkan War/turn_1.html
@@ -183,8 +183,6 @@ Ottoman Sphere: <br>
 - Moldavia - Viggo <br>
 - Serbia - Viggo <br>
 - Samos - Viggo <br>
-- Tunis - Viggo <br>
-- Aceh - Viggo <br>
  <br>
 The Coalition: <br>
 - Italy - Africa/NDP <br>
@@ -207,6 +205,7 @@ Mujahideen - all Koriks: <br>
 - Hejaz (Egypt) <br>
 - Yemen <br>
 - Nejd <br>
+- Aceh <br>
 - Levant (Egypt) <br>
 - Mesopotamia (Ottomans) <br>
 - Sudan (Egypt) <br>
