--- a/1836_RP/First Balkan War/jihad_declarations.html
+++ b/1836_RP/First Balkan War/jihad_declarations.html
@@ -82,7 +82,7 @@
   </div>
 
   <div class="treaty-post">
-    <h3>Oman, Zanzibar & Trucial Coast</h3>
+    <h3>Oman & Zanzibar</h3>
     <p>
       These coastal powers aligned with the Meccan call. Imams declared jihad against imperial trade networks, especially British-aligned ports.
       The struggle is economic, religious, and cultural.
