Refactor Persian Gulf invasion narrative and remove Oman & Zanzibar section

--- a/1836_RP/First Balkan War/afro-arabian_theatre.html
+++ b/1836_RP/First Balkan War/afro-arabian_theatre.html
@@ -86,16 +86,10 @@
   <h3>Persian Gulf</h3>
   <div class="treaty-meta">British Invasion of Kuwait</div>
   <p>
-    As British forces prepared to launch an ambitious landing in Kuwait, the region erupted. 
-    The Trucial States declared jihad, viewing the British presence as a direct threat to Islam and sovereignty.
-    Oman quickly followed, cutting off vital naval access and choking British logistics in the Gulf. <br>
-    Though the British forced their way through with superior naval firepower, they suffered heavily.
-    Many vessels were burned or seized along the coast, and soldiers were picked off by coordinated tribal and mujahideen attacks.
-    By the time they reached Kuwait, the exhausted invaders met fierce Mesopotamian resistance, organized and dug in from previous uprisings.
-    The British force was routed. The invasion had failed. <br>
-    On the flip side, the British managed to secure Persian neutrality and military passage.
+    The British launched an Invasion of Kuwait which was succesful, but the local tribes and scholars quickly rallied against them.
+    The forces with supplies from Persia and Oman managed to hold the State but were unable to expand further.
   </p>
-  <div class="treaty-meta">Casualties: Entire British landing force eliminated</div>
+  <div class="treaty-meta">Casualties: Minor, since rebels were unorganized</div>
 </div>
 
 <div class="treaty-post">
